added remaining sections to story board

--- a/app/views/board/show.html.erb
+++ b/app/views/board/show.html.erb
@@ -4,3 +4,23 @@
 <%= render(@backlog) %>
 </ol>
 </div>
+<div class="priority">
+<ol>
+<%= render(@priority) %>
+</ol>
+</div>
+<div class="active">
+<ol>
+<%= render(@active) %>
+</ol>
+</div>
+<div class="delegated">
+<ol>
+<%= render(@delegated) %>
+</ol>
+</div>
+<div class="complete">
+<ol>
+<%= render(@complete) %>
+</ol>
+</div>
