--- a/app/views/stories/_form.html.erb
+++ b/app/views/stories/_form.html.erb
@@ -16,6 +16,8 @@
     <%= f.text_field :task %>
   </div>
   <div class="field">
+  </div>
+  <div class="field">
     <%= f.label :notes %><br />
     <%= f.text_area :notes %>
   </div>
