--- a/app/views/stories/_story.html.erb
+++ b/app/views/stories/_story.html.erb
@@ -1,1 +1,1 @@
-<li class="story"><%= link_to story.task, edit_story_path(story) %></li>
+<li><%= link_to story.task, edit_story_path(story) %></li>
