ordering the Priority column

--- a/app/views/stories/_story.html.erb
+++ b/app/views/stories/_story.html.erb
@@ -1,1 +1,1 @@
-<li id="<%= story.id %>"><%= link_to story.task, edit_story_path(story) %></li>
+<li id="<%= story.id %>" class="story"><%= link_to story.task, edit_story_path(story) %></li>
