--- a/app/views/board/show.html.erb
+++ b/app/views/board/show.html.erb
@@ -1,4 +1,4 @@
-<%= link_to 'New Story', new_story_path %>
+a<%= link_to 'New Story', new_story_path %>
 <table>
 <tr>
 	<th>Backlog</th>
@@ -43,6 +43,7 @@
 </ul>
 </div>
 </td>
+</tr>
 </table>
 
 <<script>
