clean up stray board characters

--- a/app/views/board/show.html.erb
+++ b/app/views/board/show.html.erb
@@ -1,4 +1,4 @@
-a<%= link_to 'New Story', new_story_path %>
+<%= link_to 'New Story', new_story_path %>
 <table>
 <tr>
 	<th>Backlog</th>
@@ -46,7 +46,7 @@ a<%= link_to 'New Story', new_story_path %>
 </tr>
 </table>
 
-<<script>
+<script>
 	$(function() {
 		//alert('jquery enabled')
 		$(".sortcol").sortable({
